--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
     <div class="wrapper">
       <header>
         <h1>Jakub Zalewski</h1>
-        <p>zalew7@gmail.com</p>
-
-
-        <p class="view"><a href="https://github.com/zalew">View My GitHub Profile</a></p>
-
+        <p>Web development, consulting</p>
+        <ul>
+          <li><a href="mailto:zalew7@gmail.com">zalew7@gmail.com</a></li>
+          <li><a href="https://github.com/zalew">GitHub</a></li>
+          <li><a href="https://bitbucket.org/zalew">BitBucket</a></li>
+        </ul>
       </header>
       <section>
-        <h3>
-<a name="about-me" class="anchor" href="#about-me"><span class="octicon octicon-link"></span></a>About me</h3>
+        <h2>
+<a name="about-me" class="anchor" href="#about-me"><span class="octicon octicon-link"></span></a>About me</h2>
 
 <p>Within a decade in web development I have built solutions for various needs - content management, publishing, mmog, advertising campaigns, image processing, social networking, among many. I have worked with corporate clients, ad agencies, as well as private entities and startups. Currently I'm a consultant at bigcorp full-time, and for hire by the hour. </p>
 
