--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <h1>Jakub Zalewski</h1>
         <p>Web development, consulting</p>
         <ul>
-          <li><a href="mailto:zalew7@gmail.com">zalew7@gmail.com</a><strong>Email</strong></li>
-          <li><a href="https://github.com/zalew">opensource</a><strong>GitHub</strong></li>
-          <li><a href="https://bitbucket.org/zalew">opensource</a><strong>BitBucket</strong></li>
+          <li><a href="mailto:zalew7@gmail.com">zalew7@gmail.com <strong>Email</strong></a></li>
+          <li><a href="https://github.com/zalew">opensource <strong>GitHub</strong></a></li>
+          <li><a href="https://bitbucket.org/zalew">opensource <strong>BitBucket</strong></a></li>
         </ul>
       </header>
       <section>
