--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <h1>Jakub Zalewski</h1>
         <p>Web development, consulting</p>
         <ul>
-          <li><a href="mailto:zalew7@gmail.com"><strong>email</strong></a></li>
-          <li><a href="https://github.com/zalew"><strong>GitHub</strong></a></li>
-          <li><a href="https://bitbucket.org/zalew"><strong>BitBucket</strong></a></li>
+          <li><a href="mailto:zalew7@gmail.com">send me an<strong>email</strong></a></li>
+          <li><a href="https://github.com/zalew">check my<strong>GitHub</strong></a></li>
+          <li><a href="https://bitbucket.org/zalew">also my<strong>BitBucket</strong></a></li>
         </ul>
       </header>
       <section>
