--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </ul><h2>
 <a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
 
-<p>Whether you want to ask questions about my projects, work with me, or just say 'hi' - feel free to contact me at any time: <a href="zalew7@gmail.com">zalew7@gmail.com</a></p>
+<p>Whether you want to ask questions about my projects, work with me, or just say 'hi' - feel free to contact me at any time: <a href="mailto:zalew7@gmail.com">zalew7@gmail.com</a></p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
