--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Jakub Zalewski by zalew</title>
+    <title>Jakub Zalewski</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Jakub Zalewski</h1>
-        <p>Web development, consulting</p>
+        <p>web development, consulting</p>
         <ul>
           <li><a href="mailto:zalew7@gmail.com">send me an<strong>email</strong></a></li>
           <li><a href="https://github.com/zalew">check my<strong>GitHub</strong></a></li>
