--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <p>web development, consulting</p>
         <ul>
           <li><a href="mailto:zalew7@gmail.com">send me an<strong>email</strong></a></li>
+          <li><a href="https://github.com/zalew">check my<strong>GitHub</strong></a></li>
+          <li><a href="https://bitbucket.org/zalew">also my<strong>BitBucket</strong></a></li>
         </ul>
       </header>
     </div>
